@@ -82,9 +82,6 @@ hack_info_GM_level: 60
 // default: 20 (first level after normal player or super'normal' player)
 any_warp_GM_min_level: 20
 
-// Allow GM commands to be used when muted?
-allow_atcommand_when_mute: yes
-
 // The minimum level for a GM to be unable to distribyte items.
 // You should set this to the same level @item is set to in the atcommand.conf
 // NEVER SET THIS VALUE TO 0, or you will block drop/trade for normal players
